# Skills-MCP

./: .gitignore  CLAUDE.md  Dockerfile  LICENSE  README.md  SKILL_CREATION.md  pyproject.toml
apps/web/: pnpm-lock.yaml
apps/web/src/app/: globals.css  page.tsx
apps/web/src/app/api/clarify/: route.ts
apps/web/src/app/api/pipeline/: route.ts
apps/web/src/app/api/pipeline/stream/: route.ts
docs/claude-skills/: blog.md  plugins.md
skills/apollo-clay-leads/: .env.example  .gitignore  SKILL.md
skills/apollo-clay-leads/scripts/: clarify_query.py  db.py  debug_apify_logs.py  enrich_clay.py  export.py  fetch_apify_linkedin.py  fetch_apollo_api.py  ingest_apollo_csv.py  parse_query.py  run_pipeline.py  score.py
skills/apollo-clay-leads/scripts/icp_configs/: icp_v1.json
skills/visuals/: BEST_PRACTICES.md  README.md
skills/visuals/change-color/: SKILL.md
skills/visuals/change-pose/: SKILL.md
skills/visuals/change-scenario/: SKILL.md
skills/visuals/create-video/: SKILL.md
skills/visuals/remove-model/: SKILL.md
skills/visuals/retocar/: SKILL.md
skills/visuals/swap-face/: SKILL.md
src/: __init__.py  mcp_http_server.py  server.py
workflows/: example_hello_world.py  example_slack_message.py
